<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium">

        <ImageView
            android:id="@+id/iv_show"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fbg" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|bottom"
            android:text="@string/time"
            android:textColor="@color/icons"
            android:textSize="@dimen/text_small"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_medium"
            android:gravity="bottom">

            <TextView
                android:id="@+id/tv_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_show_name"
                android:textColor="@color/custextcolor"
                android:textSize="@dimen/text_small" />


            <TextView
                android:id="@+id/tv_bottom"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_top"
                android:text="@string/bottom_show_name"
                android:textColor="@color/custextcolor"
                android:textSize="@dimen/text_regular"

                android:textStyle="bold" />


            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_more_vert_black_24dp"
                android:paddingBottom="@dimen/margin_medium_3"/>

        </RelativeLayout>


    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>