<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            app:contentScrim="@color/primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_details_top_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/fbg" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:src="@drawable/ic_arrow_back_white_24dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:layout_marginRight="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:src="@drawable/ic_more_vert_white_24dp" />


            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:src="@drawable/ic_play_arrow_black_24dp"
        app:backgroundTint="@color/primary_dark"
        app:backgroundTintMode="src_over"
        app:layout_anchor="@+id/appbar"
        app:layout_anchorGravity="bottom|right" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_marginRight="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_speaker_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/top_show_name"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/tv_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/bottom_show_name"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time1"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_volume_up_accent_20dp"
                    android:drawablePadding="@dimen/margin_medium"
                    android:foreground="@drawable/ripple"
                    android:text="@string/listen"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:src="@drawable/ic_playlist_add_black_24dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:src="@drawable/ic_favorite_border_black_24dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:src="@drawable/ic_file_download_black_24dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share_black_24dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:text="@string/content_show_name"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ted_link"
                android:textStyle="italic" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/link_img"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:layout_marginLeft="@dimen/margin_medium_3"
                android:layout_marginRight="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_medium"
                android:scaleType="centerCrop"
                android:src="@drawable/fbitem" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:background="@color/line_color" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="About the speaker"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium_2">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cimv_messi"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="@dimen/margin_small"
                    android:scaleType="centerCrop"
                    android:src="@drawable/face"
                    app:civ_border_color="@color/primary_text" />


                <TextView
                    android:id="@+id/tv_top_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/cimv_messi"
                    android:text="@string/top_show_name"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_regular"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_bottom_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_top_name"
                    android:layout_toRightOf="@+id/cimv_messi"
                    android:text="@string/football"
                    android:textSize="@dimen/text_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_bottom_name"
                    android:layout_below="@+id/tv_bottom_name"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/content_show_name2"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_small" />


            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:background="@color/line_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Watch next"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular_2x" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>